--- a/templates/enroll/addandshow.html
+++ b/templates/enroll/addandshow.html
@@ -32,11 +32,12 @@
                           <td>{{ st.password }}</td>
                           <td>
                             <a href="#" class="btn btn-warning btn-sm"> Edit </a>
-                            <a href="#" class="btn btn-danger btn-sm"> Delete </a>
+                            <form action="{% url 'deletedata' st.id %}" method="post" class="d-inline">
+                                {% csrf_token %}
+                                <input type="submit" class="btn btn-danger" value="Delete">
+                            </form>
                           </td>
-
                         </tr>
-
                     {% endfor %}
                   </tbody>
                 </table>
